// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ProfileBar component profilebar shapshots have different email 1`] = `
<div class="v-menu v-menu--inline">
  <div class="v-menu__activator"><button type="button" class="v-btn v-btn--flat theme--light">
      <div class="v-btn__content">
        example@mail.ru
        <i aria-hidden="true" class="v-icon material-icons theme--light">more_vert</i></div>
    </button></div>
</div>
`;

exports[`ProfileBar component profilebar shapshots have different email 2`] = `
<div class="v-menu v-menu--inline">
  <div class="v-menu__activator"><button type="button" class="v-btn v-btn--flat theme--light">
      <div class="v-btn__content">
        newexample.@mail.ru
        <i aria-hidden="true" class="v-icon material-icons theme--light">more_vert</i></div>
    </button></div>
</div>
`;
